--- a/deploy/nginx_dylan_portfolio.conf
+++ b/deploy/nginx_dylan_portfolio.conf
@@ -1,5 +1,6 @@
 server {
-    listen 80 default_server;
+    listen 80;
+    listen 443 default_server ssl;
 
     location /static {
         alias /usr/local/apps/dylan-portfolio/static;
