Updated LinkedIn, Github profile

--- a/deploy/nginx_dylan_portfolio.conf
+++ b/deploy/nginx_dylan_portfolio.conf
@@ -1,6 +1,10 @@
 server {
-    listen 80;
-    listen 443 default_server ssl;
+    listten 80;
+    listen 443 ssl default_server;
+    ssl on;
+    server_name dylannguyen.dev;
+    ssl_certificate /your/ssl/crt/location # Certbot
+    ssl_certificate_key /your/ssl/crt/key/location # Certbot
 
     location /static {
         alias /usr/local/apps/dylan-portfolio/static;
