change ssl cert

--- a/deploy/nginx_dylan_portfolio.conf
+++ b/deploy/nginx_dylan_portfolio.conf
@@ -3,8 +3,8 @@ server {
     listen 443 ssl default_server;
     ssl on;
     server_name dylannguyen.dev;
-    #ssl_certificate /your/ssl/crt/location # Certbot
-    #ssl_certificate_key /your/ssl/crt/key/location # Certbot
+    #ssl_certificate /etc/letsencrypt/live/dylannguyen.dev/fullchain.pem; # Certbot
+    #ssl_certificate_key /etc/letsencrypt/live/dylannguyen.dev/fullchain.pem; # Certbot
 
     location /static {
         alias /usr/local/apps/dylan-portfolio/static;
