--- a/deploy/nginx_dylan_portfolio.conf
+++ b/deploy/nginx_dylan_portfolio.conf
@@ -1,11 +1,5 @@
 server {
-    listen 80;
-    listen 443 ssl default_server;
-    ssl on;
-    server_name dylannguyen.dev;
-    ssl_certificate /etc/letsencrypt/live/dylannguyen.dev/fullchain.pem; # Certbot
-    ssl_certificate_key /etc/letsencrypt/live/dylannguyen.dev/fullchain.pem; # Certbot
-
+    listen 80 default_server;
     location /static {
         alias /usr/local/apps/dylan-portfolio/static;
     }
