Update the Ip address and ssl

--- a/deploy/nginx_dylan_portfolio.conf
+++ b/deploy/nginx_dylan_portfolio.conf
@@ -1,10 +1,12 @@
 server {
     listen 80 default_server;
+    listen 443;
     location /static {
         alias /usr/local/apps/dylan-portfolio/static;
     }
 
     location / {
+        allow             192.168.1.0/24;
         proxy_pass        http://127.0.0.1:9000/;
         proxy_set_header  Host                $host;
         proxy_set_header  X-Real-IP           $remote_addr;
